--- a/app/views/buddies/index.html.erb
+++ b/app/views/buddies/index.html.erb
@@ -78,13 +78,12 @@
             </span>
           <% else %>
             <%= button_to "このバディにする",
-                  select_buddy_path(normal_buddy),
-                  method: :post,
-                  class: "px-4 py-2 rounded-full text-xs font-semibold
-                          bg-sky-500 text-white hover:bg-sky-600 transition" %>
+              select_buddy_path(normal_buddy),
+              method: :post,
+              onclick: "return confirm('#{normal_buddy.name} にバディを変更しますか？')",
+              class: "px-4 py-2 rounded-full text-xs font-semibold
+                      bg-sky-500 text-white hover:bg-sky-600 transition" %>
           <% end %>
-        </div>
-
       </div>
     </section>
   <% end %>
@@ -150,10 +149,11 @@
             </span>
           <% else %>
             <%= button_to "このバディにする",
-                  select_buddy_path(buddy),
-                  method: :post,
-                  class: "px-4 py-2 rounded-full text-xs font-semibold
-                          bg-sky-500 text-white hover:bg-sky-600 transition" %>
+              select_buddy_path(buddy),
+              method: :post,
+              onclick: "return confirm('#{buddy.name} にバディを変更しますか？')",
+              class: "px-4 py-2 rounded-full text-xs font-semibold
+                      bg-sky-500 text-white hover:bg-sky-600 transition" %>
           <% end %>
         </div>
       </article>
